2001-01-25  Darin Adler  <darin@eazel.com>

	* test/test-uri.c: (main): Added some tests to
	help demonstrate aspects of bug 6022.

2001-01-24  Rebecca Schulman  <rebecka@eazel.com>

	* doc/mime-data-specification.txt:
	Add documentation about new features we
	plan to add for 1.0.  Most of them
	were already in the document, but I've
	also cleaned it up and added a new 
	possible feature addition for the future
	that takes care of a few of our design 
	concerns: the "handled_uri_schemes"
	attribute that will list uri schemes
	that an application can handle regardless of
	mime types.  This will allow applications 
	to accept uris that are not necessarily
	understood by gnome-vfs

2001-01-22  Darin Adler  <darin@eazel.com>

	* check-mime.pl: Added lots of white space checks.

2001-01-22  Darin Adler  <darin@eazel.com>

	* check-mime.pl: Added check for i-regular.

2001-01-22  Rebecca Schulman  <rebecka@eazel.com>

	Fixed bugzilla.eazel.com bug 5498 about
	symbolic links across file systems caused 
	copies instead of drags in nautilus.
	This change makes the order uris are
	passed to check_same_fs important.
	The first uri is now the "source
	uri," and the second is the "target uri."
	
	reviewed by: Pavel Cisler <pavel@eazel.com>

	* libgnomevfs/gnome-vfs-ops.h:
	Change the argument names of check_same_fs to 
	reflect the new argument names
	* modules/file-method.c: (do_check_same_fs):
	Do a stat on the "target uri" but an lstat
	on the "source uri"
	* doc/mime-data-specification.txt:
	Added bug number references to the 
	problems that we list in the specification

2001-01-20  Pavel Cisler  <pavel@eazel.com>

	reviewed by: Rebecca Schulman  <rebecka@eazel.com>

	Work on making Search cancellable.
	
	* libgnomevfs-pthread/gnome-vfs-async-ops.c:
	(pthread_gnome_vfs_async_cancel), (gnome_vfs_job_cancel):
	Move the job cancellation outside the job->access_lock to avoid
	having to have the load_directory call completely finish before